reviso y corrijo hasta cap 2 incluido

--- a/doc/latex/Agda.tex
+++ b/doc/latex/Agda.tex
@@ -141,6 +141,8 @@
 \AgdaNumber{1}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}∷\AgdaUnderscore{}}}\<%
 \\
+%
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{List}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
@@ -281,9 +283,10 @@
 \AgdaSymbol{(}\AgdaInductiveConstructor{even-plus2}\AgdaSpace{}%
 \AgdaBound{e}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{half}\AgdaSpace{}%
+\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{half}\AgdaSpace{}%
 \AgdaBound{n}\AgdaSpace{}%
-\AgdaBound{e}\<%
+\AgdaBound{e}\AgdaSymbol{)}\<%
 \end{code}
 %</half>
 
@@ -342,16 +345,16 @@
 \\
 \>[0]\AgdaFunction{min}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
-\AgdaBound{y}\AgdaSpace{}%
-\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaBound{y}%
+\>[18]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{true}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{x}\<%
 \\
 \>[0]\AgdaFunction{min}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
-\AgdaBound{y}\AgdaSpace{}%
-\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaBound{y}%
+\>[18]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{false}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{y}\<%
@@ -376,14 +379,14 @@
 \AgdaOperator{\AgdaFunction{<}}\AgdaSpace{}%
 \AgdaBound{y}\<%
 \\
-\>[0]\AgdaSymbol{...}\AgdaSpace{}%
-\AgdaSymbol{|}\AgdaSpace{}%
+\>[0]\AgdaSymbol{...}%
+\>[18]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{true}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{x}\<%
 \\
-\>[0]\AgdaSymbol{...}\AgdaSpace{}%
-\AgdaSymbol{|}\AgdaSpace{}%
+\>[0]\AgdaSymbol{...}%
+\>[18]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{false}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{y}\<%
@@ -780,10 +783,10 @@
 \begin{code}%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{Numbers}%
-\>[470I]\AgdaKeyword{hiding}\AgdaSpace{}%
+\>[467I]\AgdaKeyword{hiding}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{suc₂}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[470I]%
+\>[.][@{}l@{}]\<[467I]%
 \>[13]\AgdaKeyword{renaming}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaDatatype{Nat}\AgdaSpace{}%
 \AgdaSymbol{to}\AgdaSpace{}%
@@ -980,11 +983,11 @@
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaKeyword{field}%
-\>[581I]\AgdaField{x}\AgdaSpace{}%
+\>[578I]\AgdaField{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\<%
 \\
-\>[.][@{}l@{}]\<[581I]%
+\>[.][@{}l@{}]\<[578I]%
 \>[10]\AgdaField{y}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\<%
@@ -1030,11 +1033,11 @@
 \\
 %
 \>[4]\AgdaKeyword{field}%
-\>[608I]\AgdaField{x}\AgdaSpace{}%
+\>[605I]\AgdaField{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\<%
 \\
-\>[.][@{}l@{}]\<[608I]%
+\>[.][@{}l@{}]\<[605I]%
 \>[10]\AgdaField{y}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\<%
@@ -1214,13 +1217,13 @@
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{xs}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[720I]\AgdaBound{f}\AgdaSpace{}%
+\>[717I]\AgdaBound{f}\AgdaSpace{}%
 \AgdaBound{x}%
 \>[32]\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
 \AgdaSymbol{\textbackslash{}}\AgdaBound{y}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[720I]%
+\>[.][@{}l@{}]\<[717I]%
 \>[22]\AgdaFunction{mapM}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
 \AgdaBound{xs}\AgdaSpace{}%
@@ -1237,7 +1240,7 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{mapM'}%
-\>[732I]\AgdaSymbol{:}\AgdaSpace{}%
+\>[729I]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSpace{}%
@@ -1247,7 +1250,7 @@
 \AgdaRecord{Monad}\AgdaSpace{}%
 \AgdaBound{M}\<%
 \\
-\>[.][@{}l@{}]\<[732I]%
+\>[.][@{}l@{}]\<[729I]%
 \>[6]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
