--- a/doc/tex/agradecimientos.tex
+++ b/doc/tex/agradecimientos.tex
@@ -6,9 +6,9 @@ En primer lugar, quiero agradecer a todos mis compañeros. A todas esas personas
 
 Gracias también a Exe, quien aceptó acompañarme en esta parte final y siempre me guió con mucha paciencia y dedicación. Aprendí mucho de él todo este tiempo y fue un placer hacer este trabajo final bajo su conducción.
 
-A mis amigas, que están siempre firmes festejando conmigo cada logro y cada paso, gracias por estar, nada sería lo mismo sin ustedes. Gracias también a toda mi familia extendida, que todavía no saben bien qué estudio pero siempre me preguntan cómo vengo y se interesan por todo lo que hago. A mis primos, que son como mis hermanos, gracias por estar siempre. 
+A mis amigas, que están siempre firmes festejando conmigo cada logro y cada paso, gracias por estar, nada sería lo mismo sin ustedes. Gracias también a toda mi familia extendida, todavía no saben bien qué estudio pero siempre me preguntan y se interesan por todo lo que hago. A mis primos, que son como mis hermanos, gracias por estar siempre. 
 
-Por último, quiero dar un gracias muy enorme a mi mamá, papá y hermanas que se bancaron mil y una crisis y llantos durante todos estos años y me acompañaron en todo. Ellos me enseñaron el valor del esfuerzo y a enfrentar cada desafío con amor y pasión, son mi motor y mi ejemplo a seguir todos los días. Gracias también a Bruno que, sobre todo este último tiempo, fue el principal receptor de todos mis nervios, malhumores y estrés y supo rescatarme de ellos y volverme a levantar cada vez. Él sabe todo lo que costó transitar este ultimo tramo y cuánto esperé que llegue este momento. Quiero dedicarles este trabajo y toda mi carrera a ellos y a mis dos ángeles del cielo, mi nono y mi nona, quienes sé que estuvieron conmigo todo este tiempo.
+Por último, quiero dar un gracias enorme a mi mamá, papá y hermanas que se bancaron mil y una crisis y llantos durante todos estos años y me acompañaron en todo. Ellos me enseñaron el valor del esfuerzo y a enfrentar cada desafío con amor y pasión, son mi motor y mi ejemplo a seguir todos los días. Un agradecimiento muy especial también para Bruno que, sobre todo este último tiempo, fue el principal receptor de todos mis nervios, malhumores y estrés y supo rescatarme de ellos y volverme a levantar cada vez. Él sabe todo lo que costó transitar este ultimo tramo y cuánto esperé que llegue este momento. Quiero dedicarles este trabajo y toda mi carrera a ellos y a mis dos ángeles del cielo, mi nono y mi nona, quienes sé que estuvieron conmigo todo este tiempo.
 
  
 
