--- a/doc/tex/introduccion.tex
+++ b/doc/tex/introduccion.tex
@@ -9,7 +9,9 @@ poner en un chip de computadora se duplica (aproximadamente) cada un par
 de años. De manera práctica, esto significa que para obtener
 mejoras en la velocidad de ejecución de un programa simplemente hay
 que esperar: después de un par de años, los programas que se escriben
-hoy ejecutarán más rápido. Sin embargo, esta ley ya no se verifica en la práctica. Por razones físicas, es cada vez más costoso aumentar el número de transistores de
+hoy ejecutarán más rápido. 
+
+Sin embargo, esta ley ya no se verifica en la práctica. Por razones físicas, es cada vez más costoso aumentar el número de transistores de
 un chip y este tipo de progreso ya no puede ser garantizado. Por lo tanto, los
 programadores se ven obligados a encontrar otras maneras de mejorar el
 desempeño de sus programas. Una de las maneras más naturales que
@@ -27,11 +29,10 @@ de ejecución secuencial, donde la computación se desarrolla siguiendo
 una única serie de pasos. Es así que lenguajes como C o Java pueden
 manejar concurrencia pero sin proponer cambios radicales en la
 concepción del lenguaje: simplemente incluyen librerías que capturan esta
-capacidad de manera externa.
+capacidad de manera externa. La misma situación se refleja en los lenguajes de programación funcional, sobre todo cuando se escriben programas con
+efectos. 
 
-La misma situación se refleja en los lenguajes de programación
-funcional, sobre todo cuando se escriben programas con
-efectos. Los programas con efectos suelen representarse utilizando
+Los programas con efectos suelen representarse utilizando
 mónadas, de manera que los programas funcionales toman una apariencia
 fundamentalmente imperativa. El uso de mónadas para estructuras semánticas de lenguajes con efectos fue desarrollado originalmente por E. Moggi \cite{moggi:1989, moggi:1991}. Poco más tarde, P. Wadler \cite{wadler:1992} adaptó el
 concepto de manera interna en los lenguajes de programación funcional,
@@ -51,7 +52,7 @@ considerablemente complicado encontrar y probar modelos válidos de
 esta estructura. 
 
 La mónada Delay fue introducida por Capretta \cite{capretta:2005} con el
-objetivo de capturar el efecto de no terminación de programas de manera explícita y
+objetivo de capturar el efecto de la no terminación de programas de manera explícita y
 uniforme. Su estructura fue estudiada en varios artículos, entre los
 que se puede mencionar la tesis de N. Veltri \cite{veltri:2017}. Una hipótesis particular es que la mónada \textit{delay} puede ser dotada de una estructura de mónada concurrente. Agda es un asistente de pruebas basado en teoría de tipos con soporte
 para inducción-recursión que ya ha sido utilizado para estudiar la
