--- a/doc/tex/resumen.tex
+++ b/doc/tex/resumen.tex
@@ -4,6 +4,6 @@ En los últimos años, la concurrencia ha cobrado mucha importancia en el mundo 
 
 Los programas con efectos suelen representarse en los lenguajes de programación funcional mediante el uso de mónadas. Nace entonces el concepto de mónada concurrente en la búsqueda de obtener primitivas bien fundadas para la concurrencia en los lenguajes de programación funcional, extendiendo las mónadas con un nuevo operador: la intercalación de computaciones. La propiedad principal de las mónadas concurrentes es la ley de intercambio, axioma que postula la relación que debe existir entre la secuenciación de computaciones (el operador original \textit{bind}) y el nuevo operador. 
  
-La mónada \textit{delay} fue definida con el objetivo de capturar el efecto de no terminación de programas de manera explícita y uniforme. Los habitantes del tipo \textit{delay} son valores ``demorados'', los cuales pueden no terminar y, por lo tanto, no retornar un valor nunca.
+La mónada \textit{delay} fue definida con el objetivo de capturar el efecto de la no terminación de programas de manera explícita y uniforme. Los habitantes del tipo \textit{delay} son valores ``demorados'', los cuales pueden no terminar y, por lo tanto, no retornar un valor nunca.
 
-En este trabajo se presenta una formalización del concepto de mónada concurrente en el lenguaje y asistente de pruebas Agda, así como también otras formalizaciones de conceptos previos como las mónadas, los funtores monoidales y los monoides concurrentes. Luego se analiza el caso particular de la mónada \textit{delay}, con el objetivo de probar o refutar que esta puede dotarse de una estructura de mónada concurrente. La principal dificultad que se presenta a la hora de realizar esta prueba es la demostración de la ley de intercambio. Se busca entonces una simplificación del problema y se demuestra que los números conaturales forman un monoide concurrente, obteniendo luego una mónada concurrente alternativa a \textit{delay}: la mónada \textit{writer} con los conaturales como monoide.
+En este trabajo se presenta una formalización del concepto de mónada concurrente en el lenguaje y asistente de pruebas Agda, así como también otras formalizaciones de conceptos previos como las mónadas, los funtores monoidales y los monoides concurrentes. Luego se analiza el caso particular de la mónada \textit{delay}, con el objetivo de probar o refutar que esta puede dotarse de una estructura de mónada concurrente. La principal dificultad que se encontró a la hora de realizar esta prueba es la demostración de la ley de intercambio. Se buscó entonces una simplificación del problema y se demostró que los números conaturales forman un monoide concurrente, obteniendo luego una mónada concurrente alternativa a \textit{delay}: la mónada \textit{writer} con los conaturales como monoide.
